--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,13 @@ a.button:hover {
   background-color:#3c2415;
   color: #ffffff;
 }
+a.twitter {
+  width: 40px;
+  height: 40px;
+  position: fixed;
+  right: 2%;
+  top: 3%;
+}
 #superContainer {
     height: 100%;
     position: relative;
