Updating animation of numbers

--- a/styles.css
+++ b/styles.css
@@ -67,8 +67,8 @@ a.button:hover {
   color: #ffffff;
 }
 a.twitter {
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   position: fixed;
   right: 2%;
   top: 3%;
@@ -498,6 +498,34 @@ hr.divider {
 }
 .section .intro.event.first p {
   margin: 30px 0;
+}
+.section .intro.event.first .st0,
+.section .st0 {
+  stroke-dasharray: 600;
+  stroke-dashoffset: 600;
+  animation-iteration-count: 1;
+  -webkit-transition: stroke-dashoffset 2.5s cubic-bezier(0, 0, 0.11, 0.99);
+  -moz-transition: stroke-dashoffset 2.5s cubic-bezier(0, 0, 0.11, 0.99);
+  -o-transition: stroke-dashoffset 2.5s cubic-bezier(0, 0, 0.11, 0.99);
+  transition: stroke-dashoffset 2.5s cubic-bezier(0, 0, 0.11, 0.99);
+}
+.section .intro.event.first.active .st0,
+.section.active .st0 {
+    stroke-dashoffset: 0;
+    stroke-dasharray: 600;
+}
+.section .intro.event.first .st1,
+.section .st1 {
+  opacity:0;
+  -webkit-transition: opacity .5s ease-in-out;
+  -moz-transition: opacity .5s ease-in-out;
+  -o-transition: opacity .5s ease-in-out;
+  transition: opacity .5s ease-in-out;
+  transition-delay: .5s;
+}
+.section .intro.event.first.active .st1,
+.section.active .st1 {
+    opacity:1;
 }
 span.dropcap {
   font-size: 4em;
